fix(withsectiontitle): fix className and wrapped container props type

--- a/src/HOCs/withSectionTitle/styles/base.module.scss
+++ b/src/HOCs/withSectionTitle/styles/base.module.scss
@@ -1,4 +1,4 @@
-.city_title {
+.section_title {
 	@apply absolute m-auto inset-x-0;
 
 	&__icon {
