--- a/src/HOCs/withSectionTitle/styles/pc.module.scss
+++ b/src/HOCs/withSectionTitle/styles/pc.module.scss
@@ -1,5 +1,5 @@
 @media (min-width: 1280px) {
-	.city_title {
+	.section_title {
 		@apply w-[1062px] h-[29px] top-[-41px];
 
 		&__icon {
